--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "叶子是不会飞翔的翅膀，翅膀是落在天上的叶子；孤单是一个人的狂欢，狂欢是一个人的孤单。"
+description: "“树木在森林中相依偎而生长， 星辰在银河中因辉映而璀璨。”"
 ---
 
 <!--
