--- a/3-about.html
+++ b/3-about.html
@@ -17,7 +17,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hi，我是<strong>TigerXiaoxi</strong>，现居被誉为“共和国长子”的城市——沈阳。</p>
+    <p>Hi，我是<strong>TigerXiaoxi</strong>，现居住在沈阳。</p>
 
     <p></p>
     
