--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "网络似乎出现了问题 😥"
+description: "弦未尽，执笔梦一场。网络似乎出现了问题。"
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
