--- a/1-resources.html
+++ b/1-resources.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Resources"
-description: "教程非常简单"
+description: ""
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -14,10 +14,8 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>小白也能掌握<br>
-    学一点儿是一点儿，不用也不会忘</p></blockquote>
 
-    <p>这里是虎小希的个人博客（持续更新中，请常来看看）。</p>
+    <p>这里是 TigerXiaoxi 的个人博客。</p>
     
     <p></p>
         
