--- a/3-about.html
+++ b/3-about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "为了让更多刚刚接触电脑的小白能学会更多知识而作"
+description: ""
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -14,10 +14,8 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
 
-    <p>Hi，我是<strong>tigerxiaoxi</strong>，现居住在沈阳。</p>
+    <p>我是<strong> TigerXiaoxi </strong>，现居住在沈阳。</p>
 
     <p></p>
     
