--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "珠箔飘灯独自归，夏末凉城空余心。你来到了没有知识的荒原。"
+description: "此页面未找到。"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
