--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: page
-description: "“树木在森林中相依偎而生长， 星辰在银河中因辉映而璀璨。”"
+description: ""
 ---
 
 <!--
 <ul class="pager">
   
     <li class="next">
-        <a href="https://klovien.github.io/1-resources/" data-toggle="tooltip" data-placement="top" title="学习教程">
-                        开始学习<br>
+        <a href="https://klovien.github.io/1-resources/" data-toggle="tooltip" data-placement="top" title="">
+                        <br>
         </a>
     </li>           
                     
