--- a/1-resources.html
+++ b/1-resources.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Resources"
 description: ""
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/StarTrails.jpg"
 ---
 
 <!-- Language Selector -->
