--- a/2-tags.html
+++ b/2-tags.html
@@ -2,7 +2,7 @@
 title: Blog
 layout: default
 description: ""
-header-img: "img/tag-bg.jpg"
+header-img: "img/StarTrails.jpg"
 ---
 
 <!-- Page Header -->
