--- a/1-resources.html
+++ b/1-resources.html
@@ -15,7 +15,7 @@ header-img: "img/StarTrails.jpg"
 
     <!--copied from markdown -->
 
-    <p>这里是 TigerXiaoxi 的个人博客。</p>
+    <p>这里是 Venti__0616 的博客。</p>
     
     <p></p>
         
