--- a/3-about.html
+++ b/3-about.html
@@ -15,7 +15,7 @@ header-img: "img/StarTrails.jpg"
 
     <!--copied from markdown -->
 
-    <p>我是<strong> TigerXiaoxi </strong>，现居住在沈阳。</p>
+    <p>我是<strong> Venti__0616 </strong>。</p>
 
     <p></p>
     
