--- a/3-about.html
+++ b/3-about.html
@@ -21,7 +21,7 @@ header-img: "img/StarTrails.jpg"
 
     <p>你说的对，但是《原神》是由米哈游自主研发的一款全新开放世界冒险游戏。游戏发生在一个被称作「提瓦特」的幻想世界，在这里，被神选中的人将被授予「神之眼」，导引元素之力。你将扮演一位名为「旅行者」的神秘角色，在自由的旅行中邂逅性格各异、能力独特的同伴们，和他们一起击败强敌，找回失散的亲人——同时，逐步发掘「原神」的真相。</p>
     
-    <p>你说的对，但是《全国信息学奥林匹克竞赛》是由中国计算机学会自主研发的一款全新在线联机对战游戏。游戏发生在一个被称作「机房」的现实世界，在这里，被选中的人将被授予「DEV C++」，导引信奥之力。你将扮演一位名为「OIer」的神秘角色，在自由的旅行中邂逅性格各异、能力独特的同伴们，和他们一起击学习算法，晋级比赛——同时，逐步发掘「信息学奥赛」的真相。</p>
+    <p>你说的对，但是《全国信息学奥林匹克竞赛》是由中国计算机学会自主研发的一款全新在线联机对战游戏。游戏发生在一个被称作「机房」的现实世界，在这里，被选中的人将被授予「DEV C++」，导引信奥之力。你将扮演一位名为「OIer」的神秘角色，在自由的旅行中邂逅性格各异、能力独特的同伴们，和他们一起学习算法，晋级比赛——同时，逐步发掘「信息学奥赛」的真相。</p>
     
 </div>
 
